# tracer

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  a.out  compile_commands.json  out.ppm  readme.md
.cache/clangd/index/: Arg.h.E2993C3087176D02.idx  ArgException.h.B826B00EEB6A6CE8.idx  ArgTraits.h.BFBF879FB61884DB.idx  BlendMode.cpp.FF5CE7AA7F333008.idx  BlendMode.hpp.F911E699F231B8B5.idx  CLI.c.F2CD34987AA63555.idx  CLI.cpp.CE86D6CA416BBA4C.idx  CLI.h.4CF4E7333F803172.idx  CLI.hpp.EA1BD668473311F4.idx  CircleShape.cpp.6A8B39270D881512.idx  CircleShape.hpp.5F64B19104CD6091.idx  Clipboard.cpp.D199F39CD3C9B27C.idx  Clipboard.hpp.C2E1FC7BE8DB0E65.idx  ClipboardImpl.cpp.7660566284C4C5FD.idx  ClipboardImpl.hpp.86EF35C65C34793E.idx  ClipboardImpl.hpp.D3D6B6606C7D08EA.idx  Clock.cpp.333797A54559048F.idx  Clock.hpp.55EE97DFEB2C1477.idx  ClockImpl.cpp.EDB0D3954D6FB46A.idx  ClockImpl.hpp.9DF6E38FAFCFBCCA.idx  CmdLine.h.BDABBBEED3C3D2BE.idx  CmdLineInterface.h.F9B57A36C1B0BBA2.idx  CmdLineOutput.h.EBD69E9A941E5487.idx  Color.cpp.E59A04B520C40D1A.idx  Color.hpp.07F3145DC3D815CF.idx  Config.hpp.E700B894E2CCE390.idx  Constraint.h.88297AF549C82864.idx  Context.c.34CE93B6F76905F7.idx  Context.c.992AA548796D912D.idx  Context.cpp.3FF63BB62E2C253F.idx  Context.cpp.C7919E931E75B225.idx  Context.h.1A9BE01ADCC12D7D.idx  Context.h.B414FB93B4A6EF43.idx  Context.hpp.7AC1B3B672AC4B7F.idx  Context.hpp.E2D8CABC9E12F7CD.idx  Context.hpp.E4F24B81CA87762F.idx  ContextSettings.hpp.DA3F833E49C8C528.idx  ConvexShape.cpp.C561E2B0638B99D0.idx  ConvexShape.hpp.8FAE664FDF659676.idx  Cursor.cpp.A77080973B403D03.idx  (+482 more)
kernel/: a.bc  trace.c  vadd.clcpp  vadd.spv
src/: colour.hpp  main.cpp  poly.hpp  scratch.py  test.cpp  test.cppnocmp  trace.cpp  trace.hpp  vec.hpp
src/headers/: trace.hpp
src/headers/resources/: colour.hpp  common_mats.hpp  image.hpp  material.hpp  sphere.hpp
src/headers/utils/: math.hpp  vec.hpp
src/resources/: colour.cpp  image.cpp  material.cpp
src/utils/: math.cpp
